removed menu z index to see if it fixes inability to write in name slot of contact on mobile

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -54,6 +54,5 @@ h1 {
         padding-top: -20px;
         transition: 0.3s;
         position: absolute;
-        z-index: 20;
     }
 }
